--- a/assets/css/gamePage.css
+++ b/assets/css/gamePage.css
@@ -11,6 +11,7 @@
     font-family: 'Rammetto One', cursive;
     margin-left: 20rem;
     color: rgb(107, 29, 26);
+    margin-top: 2rem;
 }
 
 #start{
